unpackaged/main/default/objects/ebcm__EinsteinBotChatMessageSettings__mdt/ebcm__EinsteinBotChatMessageSettings__mdt.object-meta.xml
<CustomObject>
    <label>EinsteinBotChatMessageSetting</label>
    <pluralLabel>EinsteinBotChatMessageSettings</pluralLabel>
</CustomObject>