unpackaged/main/default/objects/ebcm__EinsteinBotChatMessageSettings__mdt/fields/ebcm__Bot_Name__c.field-meta.xml
<CustomField>
    <fullName>ebcm__Bot_Name__c</fullName>
    <label>Bot Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>