unpackaged/main/default/objects/ebcm__EinsteinBotChatMessageSettings__mdt/fields/ebcm__Dialog_Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>ebcm__Dialog_Request_Payload__c</fullName>
    <label>Dialog Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>