unpackaged/main/default/objects/ebcm__EinsteinBotChatMessageSettings__mdt/fields/ebcm__Type__c.field-meta.xml
<CustomField>
    <fullName>ebcm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carousel</fullName>
                <default>true</default>
                <label>Carousel</label>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>MiniCard</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
            <value>
                <fullName>RadioGroup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>