unpackaged/main/default/objects/ebcm__EinsteinBotChatMessageSettings__mdt/listViews/ebcm__Details.listView-meta.xml
<ListView>
    <fullName>ebcm__Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ebcm__Bot_Name__c</columns>
    <columns>ebcm__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>